--- a/css/vote.css
+++ b/css/vote.css
@@ -113,6 +113,7 @@ button {
   min-width: 150px;
   box-shadow: 0 4px 8px 0 rgba(97, 83, 53, 0.7);
   overflow: hidden;
+  background: #F0E6D2;
 }
 
 .chair-card img {
